--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     <header>
         <div class="header-content">
             <!-- Add your profile picture here -->
-            <img src="udhaya.jpg" alt="Your Profile Picture" class="profile-picture">
+            <img src="./udhaya.jpg" alt="Your Profile Picture" class="profile-picture">
             <h1>Udhaya thirunavukarasu</h1>
             <p>Am Bachelor of Computer Application Student</p>
         </div>
@@ -163,7 +163,7 @@
         <div class="section-content">
             <center>
             <h2>Resume</h2>
-            <a href="file.pdf" target="_blank" class="download-button">Download CV</a>
+            <a href="./file.pdf" target="_blank" class="download-button">Download CV</a>
         </center>
         </div>
         
